--- a/keras-config-tiny.yml
+++ b/keras-config-tiny.yml
@@ -2,12 +2,12 @@ KerasH5:   resnet_v1_eembc_tiny/model_best.h5
 OutputDir: my-hls-test-tiny
 ProjectName: myproject
 XilinxPart: xc7z020clg400-1
-ClockPeriod: 5
-Backend: Pynq
+ClockPeriod: 10
+Backend: Vivado # or Pynq
 
 IOType: io_stream
 HLSConfig:
   Model:
     Precision: ap_fixed<8,4>
-    ReuseFactor: 100
+    ReuseFactor: 20
     Strategy: Resource
