--- a/tiny.yml
+++ b/tiny.yml
@@ -26,3 +26,12 @@ fit:
   patience: 40
   batch_size: 32
   verbose: 1
+
+convert:
+  OutputDir: my-hls-test-tiny
+  XilinxPart: xc7z020clg400-1
+  Backend: Vivado
+  IOType: io_stream
+  Precision: ap_fixed<8,4>
+  ReuseFactor: 20
+  Strategy: Resource
