--- a/environment.yml
+++ b/environment.yml
@@ -18,3 +18,6 @@ dependencies:
     - git+https://github.com/google/qkeras#egg=qkeras
     - keras-flops
     - git+https://github.com/kentaroy47/keras-Opcounter
+    - kerastuner
+    - setgpu
+    - mplhep
