--- a/baseline.yml
+++ b/baseline.yml
@@ -1,19 +1,20 @@
-save_dir: resnet_v1_eembc
+save_dir: resnet_v1_eembc_16_32_8_3_3_1_3
 
 model:
   name: resnet_v1_eembc
   filters: 
   - 16
   - 32
-  - 64
+  - 8
   l1: 0
   l2: 1e-4
   kernels:
   - 3
-  - 1
+  - 3
   strides: 
   - 1
-  - 2
+  - 3
+
 
 pruning:
   sparsity: 1.0 
