--- a/tiny.yml
+++ b/tiny.yml
@@ -32,6 +32,7 @@ convert:
   XilinxPart: xc7z020clg400-1
   Backend: Pynq
   IOType: io_stream
-  Precision: ap_fixed<12,4>
-  ReuseFactor: 20
+  Precision: ap_fixed<8,4>
+  ReuseFactor: 64
+  ClockPeriod: 20
   Strategy: Resource
