--- a/baseline.yml
+++ b/baseline.yml
@@ -1,19 +1,30 @@
-save_dir: resnet_v1_eembc_16_32_8_3_3_1_3
+save_dir: resnet_v1_eembc
 
 model:
   name: resnet_v1_eembc
   filters: 
   - 16
+  - 16
   - 32
-  - 8
+  - 32
+  - 64
+  - 64
   l1: 0
   l2: 1e-4
   kernels:
   - 3
   - 3
-  strides: 
+  - 3
+  - 3
+  - 3
   - 1
   - 3
+  - 3
+  - 1
+  strides: 
+  - '111'
+  - '212'
+  - '212'
 
 
 pruning:
