--- a/tiny.yml
+++ b/tiny.yml
@@ -1,17 +1,18 @@
 save_dir: resnet_v1_eembc_tiny
 
 model:
-  name: resnet_v1_eembc_tiny
+  name: resnet_v1_eembc
   filters: 
-  - 2
+  - 8
+  - 8
   l1: 0
   l2: 1e-4
   kernels:
-  - 1
+  - 3
+  - 3
   - 1
   strides:
-  - 1
-  - 2
+  - '111'
 
 pruning:
   sparsity: 1.0 
