--- a/baseline.yml
+++ b/baseline.yml
@@ -44,7 +44,7 @@ fit:
 convert:
   OutputDir: my-hls-test
   XilinxPart: xc7z020clg400-1
-  Backend: Vivado
+  Backend: Pynq
   IOType: io_stream
   Precision: ap_fixed<8,4>
   ReuseFactor: 2304
