--- a/quantized.yml
+++ b/quantized.yml
@@ -3,14 +3,14 @@ save_dir: resnet_v1_eembc_quantized
 model:
   name: resnet_v1_eembc_quantized
   filters: 
-  - 8
-  - 8
+  - 2
+  - 2
   l1: 0
   l2: 1e-4
   kernels:
   - 3
   - 3
-  - 1
+  - 3
   strides: 
   - '111'
 
@@ -33,3 +33,13 @@ quantization:
   logit_int_bits: 0
   activation_total_bits: 7
   activation_int_bits: 3
+
+convert:
+  OutputDir: my-hls-test-quantized
+  XilinxPart: xc7z020clg400-1
+  Backend: Pynq
+  IOType: io_stream
+  Precision: ap_fixed<8,4>
+  ReuseFactor: 64
+  ClockPeriod: 20
+  Strategy: Resource
