--- a/tiny.yml
+++ b/tiny.yml
@@ -12,7 +12,7 @@ model:
   - 3
   - 3
   strides:
-  - '334'
+  - '311'
 
 pruning:
   sparsity: 1.0 
@@ -33,7 +33,8 @@ convert:
   XilinxPart: xc7z020clg400-1
   Backend: Pynq
   IOType: io_stream
-  Precision: ap_fixed<8,4>
-  ReuseFactor: 64
+  Precision: ap_fixed<10,4,AP_SAT,AP_RND>
+  PrecisionActivation: ap_fixed<10,4,AP_SAT,AP_RND>
+  ReuseFactor: 1024
   ClockPeriod: 20
   Strategy: Resource
