--- a/quantized.yml
+++ b/quantized.yml
@@ -39,8 +39,8 @@ convert:
   XilinxPart: xc7z020clg400-1
   Backend: Pynq
   IOType: io_stream
-  Precision: ap_fixed<10,6,AP_SAT,AP_RND>
-  PrecisionActivation: ap_fixed<10,6,AP_SAT,AP_RND>
+  Precision: ap_fixed<10,6,AP_RND,AP_SAT>
+  PrecisionActivation: ap_fixed<10,6,AP_RND,AP_SAT>
   PrecisionAccumulator: ap_fixed<14,10,AP_RND,AP_SAT>
   ReuseFactor: 1024
   ClockPeriod: 20
