--- a/quantized.yml
+++ b/quantized.yml
@@ -1,10 +1,10 @@
-save_dir: resnet_v1_eembc_quantized-16filt-5bit
+save_dir: resnet_v1_eembc_quantized_test
 
 model:
   name: resnet_v1_eembc_quantized
   filters: 
-  - 16
-  - 16
+  - 32
+  - 32
   l1: 0
   l2: 1e-4
   kernels:
@@ -13,7 +13,7 @@ model:
   - 3
   strides: 
   - '343'
-  skip: 1
+  skip: 0
 
 pruning:
   sparsity: 1.0
@@ -30,21 +30,25 @@ fit:
   verbose: 1
 
 quantization:
-  logit_total_bits: 5
-  logit_int_bits: 1
-  activation_total_bits: 5
-  activation_int_bits: 1
+  logit_total_bits: 7
+  logit_int_bits: 2
+  logit_quantizer: quantized_bits
+  activation_total_bits: 7
+  activation_int_bits: 2
+  activation_quantizer: quantized_relu
+  alpha: 1
+  use_stochastic_rounding: 0
 
 convert:
-  OutputDir: my-hls-test-quantized-16filt-5bit-stable
+  OutputDir: my-hls-test-quantized
   XilinxPart: xc7z020clg400-1
   Backend: Pynq
   IOType: io_stream
-  Precision: ap_fixed<8,5,AP_RND,AP_SAT>
-  PrecisionActivation: ap_ufixed<7,2,AP_RND,AP_SAT>
+  Precision: ap_fixed<10,7,AP_RND,AP_SAT>
+  PrecisionActivation: ap_ufixed<8,3,AP_RND,AP_SAT>
   ReuseFactor: 16384
   Trace: 0
-  Build: 1
+  Build: 0
   ClockPeriod: 20
   Strategy: Resource
   Override:
@@ -52,16 +56,16 @@ convert:
       Precision: ap_ufixed<8,1>
     softmax:
       Strategy: Stable
-      Precision: ap_fixed<14,2,AP_RND,AP_SAT>
-      exp_table_t: ap_fixed<18,8,AP_RND,AP_SAT>
-      inv_table_t: ap_fixed<18,8,AP_RND,AP_SAT>
+      Precision: ap_ufixed<14,2,AP_RND,AP_SAT>
+      exp_table_t: ap_ufixed<18,8,AP_RND,AP_SAT>
+      inv_table_t: ap_ufixed<18,8,AP_RND,AP_SAT>
     average_pooling2d:
       accum_t: ap_fixed<14,10,AP_RND,AP_SAT>
     q_conv2d_batchnorm:
-      accum_t: ap_fixed<14,6,AP_RND,AP_SAT>
+      accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
     q_conv2d_batchnorm_1:
-      accum_t: ap_fixed<14,6,AP_RND,AP_SAT>
+      accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
     q_conv2d_batchnorm_2:
-      accum_t: ap_fixed<14,6,AP_RND,AP_SAT>
+      accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
     q_dense:
-      accum_t: ap_fixed<14,6,AP_RND,AP_SAT>
+      accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
