--- a/quantized-67.yml
+++ b/quantized-67.yml
@@ -1,4 +1,4 @@
-save_dir: resnet_v1_eembc_quantized_test_3_stack_4_stride
+save_dir: resnet_v1_eembc_quantized_test_conv_down_sample_1
 
 model:
   name: resnet_v1_eembc_quantized
@@ -9,6 +9,8 @@ model:
   - 16
   - 16
   - 16
+  - 2
+  - 2
   l1: 0
   l2: 1e-4
   kernels:
@@ -21,10 +23,13 @@ model:
   - 3
   - 3
   - 1
+  - 3
+  - 3
   strides: 
   - '111'
   - '212'
   - '212'
+  - '220'
   skip: 0
 
 pruning:
@@ -52,7 +57,7 @@ quantization:
   use_stochastic_rounding: 0
 
 convert:
-  OutputDir: my-hls-test-quantized_3_stack_4_stride
+  OutputDir: my-hls-test-quantized_3_conv_down_sample_1
   XilinxPart: xc7z020clg400-1
   Backend: Pynq
   IOType: io_stream
@@ -71,8 +76,6 @@ convert:
       Precision: ap_ufixed<14,2,AP_RND,AP_SAT>
       exp_table_t: ap_ufixed<18,8,AP_RND,AP_SAT>
       inv_table_t: ap_ufixed<18,8,AP_RND,AP_SAT>
-    average_pooling2d:
-      accum_t: ap_fixed<14,10,AP_RND,AP_SAT>
     q_conv2d_batchnorm:
       accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
     q_conv2d_batchnorm_1:
@@ -86,6 +89,10 @@ convert:
     q_conv2d_batchnorm_5:
       accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
     q_conv2d_batchnorm_6:
+      accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
+    q_conv2d_batchnorm_7:
+      accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
+    q_conv2d_batchnorm_8:
       accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
     q_dense:
       accum_t: ap_fixed<16,6,AP_RND,AP_SAT>
