--- a/tiny.yml
+++ b/tiny.yml
@@ -15,7 +15,7 @@ model:
   - '411'
   skip: 0
   avg_pooling: 0
-  final_activation: 0
+  final_activation: 1
 
 pruning:
   sparsity: 1.0
@@ -45,15 +45,19 @@ convert:
   RemoveSoftmax: 1
   OutputDir: my-hls-test-quantized-tiny
   XilinxPart: xc7z020clg400-1
-  Backend: Vivado
+  Backend: VivadoAccelerator
   IOType: io_stream
-  Precision: ap_fixed<9,6>
+  Interface: axi_stream
+  Driver: python
+  Board: pynq-z2
+  Precision: ap_fixed<8,6>
   PrecisionActivation: ap_ufixed<8,3,AP_RND,AP_SAT>
   ReuseFactor: 16384
   Trace: 0
   Build: 1
   ClockPeriod: 20
   Strategy: Resource
+
   Override:
     input_1:
       Precision: ap_ufixed<8,0>
@@ -62,19 +66,38 @@ convert:
       Precision:
         weight: ap_fixed<8,3>
         bias: ap_fixed<8,3>
+        result: ap_fixed<9,6>
+        default: ap_fixed<9,6>
+    q_activation:
+      Precision:
+        default: ap_fixed<9,6>
+        result: ap_fixed<8,3,AP_RND,AP_SAT>
     q_conv2d_batchnorm_1:
       accum_t: ap_fixed<14,6>
       Precision:
         weight: ap_fixed<8,3>
         bias: ap_fixed<8,3>
+        result: ap_fixed<9,6>
+        default: ap_fixed<9,6>
+    q_activation_1:
+      Precision:
+        default: ap_fixed<9,6>
+        result: ap_fixed<8,3,AP_RND,AP_SAT>
     q_conv2d_batchnorm_2:
       accum_t: ap_fixed<14,6>
       Precision:
         weight: ap_fixed<8,3>
         bias: ap_fixed<8,3>
+        result: ap_fixed<9,6>
+        default: ap_fixed<9,6>
+    q_activation_2:
+      Precision:
+        default: ap_fixed<9,6>
+        result: ap_fixed<8,3,AP_RND,AP_SAT>
     q_dense:
       accum_t: ap_fixed<12,6>
       Precision:
         weight: ap_fixed<8,3>
         bias: ap_fixed<8,3>
         result: ap_fixed<8,6>
+        default: ap_fixed<8,6>
