--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
     - jupyter
     - pydot
     - graphviz
-    - git+https://github.com/fastmachinelearning/hls4ml@master#egg=hls4ml[profiling]
+    - git+https://github.com/nicologhielmetti/hls4ml.git@fifo_depth_opt#egg=hls4ml[profiling]
     - matplotlib
     - numpy
     - PyYAML
