--- a/hls4ml/environment.yml
+++ b/hls4ml/environment.yml
@@ -8,7 +8,8 @@ dependencies:
     - jupyter
     - pydot
     - graphviz
-    - git+https://github.com/hls4ml-finn-mlperftiny/hls4ml.git@fifo_depth_opt#egg=hls4ml[profiling]
+    # - git+https://github.com/hls4ml-finn-mlperftiny/hls4ml.git@fifo_depth_opt#egg=hls4ml[profiling]
+    - git+https://github.com/anmeza/hls4ml.git@relu_fuse#egg=hls4ml[profiling]
     - matplotlib
     - numpy
     - PyYAML
