--- a/hls4ml/tiny2.yml
+++ b/hls4ml/tiny2.yml
@@ -60,7 +60,8 @@ convert:
   ReuseFactor: 16384
   Trace: 0
   Build: 1
-  FIFO_opt: 1
+  FIFO_opt: 0
+  MergedRelu: 1
   ClockPeriod: 10
   Strategy: Resource
   Override:
