--- a/hls4ml/tiny2_arty-a7-100t.yml
+++ b/hls4ml/tiny2_arty-a7-100t.yml
@@ -48,14 +48,15 @@ quantization:
   use_stochastic_rounding: 0
 
 convert:
+  ApplyPatches: 1
   RemoveSoftmax: 1
-  OutputDir: my-hls-test-quantized-tiny2
-  XilinxPart: xc7z020clg400-1
+  OutputDir: my-hls-test-quantized-tiny2-arty-a7-100t
+  XilinxPart: xc7a100tcsg324-1
   Backend: VivadoAccelerator
   IOType: io_stream
   Interface: axi_master
   Driver: c
-  Board: pynq-z2
+  Board: arty-a7-100t
   Precision: ap_fixed<12,7>
   ReuseFactor: 16384
   Trace: 0
