--- a/hls4ml/tiny2_pynq-z2.yml
+++ b/hls4ml/tiny2_pynq-z2.yml
@@ -48,19 +48,20 @@ quantization:
   use_stochastic_rounding: 0
 
 convert:
+  ApplyPatches: 1
   RemoveSoftmax: 1
-  OutputDir: my-hls-test-quantized-tiny2-arty
-  XilinxPart: xc7a100tcsg324-1
+  OutputDir: my-hls-test-quantized-tiny2-pynq-z2
+  XilinxPart: xc7z020clg400-1
   Backend: VivadoAccelerator
   IOType: io_stream
   Interface: axi_master
   Driver: c
-  Board: arty-a7-100t
+  Board: pynq-z2
   Precision: ap_fixed<12,7>
   ReuseFactor: 16384
   Trace: 0
   Build: 1
-  FIFO_opt: 0
+  FIFO_opt: 1
   MergedRelu: 1
   ClockPeriod: 10
   Strategy: Resource
