--- a/hls4ml/tiny2_pynq-z2.yml
+++ b/hls4ml/tiny2_pynq-z2.yml
@@ -56,6 +56,8 @@ convert:
   IOType: io_stream
   Interface: axi_master
   Driver: c
+  InputType: ap_uint<8>
+  OutputType: float
   Board: pynq-z2
   Precision: ap_fixed<12,7>
   ReuseFactor: 16384
