--- a/hls4ml/tiny2_arty-a7-100t_power.yml
+++ b/hls4ml/tiny2_arty-a7-100t_power.yml
@@ -50,20 +50,20 @@ quantization:
 convert:
   ApplyPatches: 1
   RemoveSoftmax: 1
-  OutputDir: my-hls-test-quantized-tiny2-pynq-z2-rf16384-6p67ns_FIFO_OPT
-  XilinxPart: xc7z020clg400-1
+  OutputDir: my-hls-test-quantized-tiny2-arty-a7-100t-rf16384-6p67ns_power_FIFO_OPT
+  XilinxPart: xc7a100tcsg324-1
   Backend: VivadoAccelerator
   IOType: io_stream
   Interface: axi_master
   Driver: c
   InputType: ap_uint<8>
   OutputType: float
-  Board: pynq-z2
+  Board: arty-a7-100t
   Precision: ap_fixed<12,7>
   ReuseFactor: 16384
   Trace: 0
   Build: 1
-  EEMBC_power: 0
+  EEMBC_power: 1
   FIFO_opt: 0
   FIFO_opt_json: max_depth_rf16384.json
   MergedRelu: 1
