--- a/hls4ml/tiny2_pynq-z2.yml
+++ b/hls4ml/tiny2_pynq-z2.yml
@@ -50,7 +50,7 @@ quantization:
 convert:
   ApplyPatches: 1
   RemoveSoftmax: 1
-  OutputDir: my-hls-test-quantized-tiny2-pynq-z2-rf16384-6p67ns_FIFO_OPT
+  OutputDir: my-hls-test-quantized-tiny2-pynq-z2-rf512-16384-6p67ns_FIFO_OPT
   XilinxPart: xc7z020clg400-1
   Backend: VivadoAccelerator
   IOType: io_stream
@@ -65,7 +65,7 @@ convert:
   Build: 1
   EEMBC_power: 0
   FIFO_opt: 0
-  FIFO_opt_json: max_depth_rf16384.json
+  FIFO_opt_json: max_depth_rf512-16384.json
   MergedRelu: 1
   ClockPeriod: 6.67
   Strategy: Resource
@@ -96,6 +96,7 @@ convert:
         result: ap_fixed<12,7>
         default: ap_fixed<12,7>
       ConvImplementation: 'LineBuffer'
+      ReuseFactor: 512
     q_conv2d_batchnorm_1_linear:
       Precision:
         result: ap_fixed<12,7>
@@ -112,6 +113,7 @@ convert:
         result: ap_fixed<12,7>
         default: ap_fixed<12,7>
       ConvImplementation: 'LineBuffer'
+      ReuseFactor: 512
     q_conv2d_batchnorm_2_linear:
       Precision:
         result: ap_fixed<12,7>
@@ -128,6 +130,7 @@ convert:
         result: ap_fixed<12,7>
         default: ap_fixed<12,7>
       ConvImplementation: 'LineBuffer'
+      ReuseFactor: 512
     q_conv2d_batchnorm_3_linear:
       Precision:
         result: ap_fixed<12,7>
@@ -144,6 +147,7 @@ convert:
         result: ap_fixed<12,7>
         default: ap_fixed<12,7>
       ConvImplementation: 'LineBuffer'
+      ReuseFactor: 4096
     q_conv2d_batchnorm_4_linear:
       Precision:
         result: ap_fixed<12,7>
